--- a/SBC/Paco/img/Untitled-Copy1.ipynb
+++ b/SBC/Paco/img/Untitled-Copy1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Rasperry Pi](img/F8111284-01.jpg \"Rasperry Pi 3\")"
+    "![Rasperry Pi](F8111284-01.jpg \"Rasperry Pi 3\")"
    ]
   },
   {
