--- a/IHM/Maxime C/Untitled.ipynb
+++ b/IHM/Maxime C/Untitled.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![capture](touche.jpg)\n",
+    "![Manettes PS4](touche.jpg)\n",
     "A : Flèches directionnelles \n",
     "F : Touches d'intéraction"
    ]
