Update and rename Touches manette PS4.ipynb to Touches manette PS3.ipynb

--- a/IHM/Maxime C/Touches manette PS3.ipynb
+++ b/IHM/Maxime C/Touches manette PS3.ipynb
@@ -18,7 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Manettes PS4](touche.jpg)\n",
+    "![Manettes PS1
+   ](touche.jpg)\n",
     "A : Flèches directionnelles \n",
     "F : Touches d'intéraction"
    ]
