--- a/Robotique/Guillaume Cochard Robotique/Texte fonction acquerir.ipynb
+++ b/Robotique/Guillaume Cochard Robotique/Texte fonction acquerir.ipynb
@@ -11,22 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## il acquerit des informations grâce a des capteurs qui sont:"
+    "## il acquiert des informations grâce a des capteurs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### le capteur de contact"
+    "chaque capteur donne une information permetant de d'agir en conséquence comme par exemple:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ce capteur marche grâce a detecteur de pression situé a l'avant qui va s'écrasé quand une surface est touché, et il envoye les données."
+    "![capteur de base](imageCapteur/elementbasique.png )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le capteur de contact: quand la partie orange est pressée par un obstacle, le capteur acquérit l'information et l'envoie à la machine centrale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
